[user] add user endpoints for listing products
